crates/cribo/tests/snapshots/bundled_code@namespace_attribute_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/namespace_attribute_reference/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
_cribo_captured = {}
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace, _captured=_cribo_captured):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _captured[binding] if binding in _captured else _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('mypkg', '_cribo_init___cribo_d4de1c_mypkg', 'mypkg', True)
_cribo_finder.register('mypkg.compat', '_cribo_init___cribo_19d82f_mypkg_compat', 'mypkg_compat', False)
_cribo_finder.register('mypkg.exceptions', '_cribo_init___cribo_4c6596_mypkg_exceptions', 'mypkg_exceptions', False)
mypkg_compat = _cribo.types.SimpleNamespace(__name__='mypkg.compat', __initializing__=False, __initialized__=False)
_cribo_finder.bind('mypkg.compat', mypkg_compat)
def _cribo_init___cribo_19d82f_mypkg_compat(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'mypkg'
    _cribo_self.__doc__ = None
    try:
        JSONDecodeError = _cribo.json.JSONDecodeError
        mypkg_compat.JSONDecodeError = JSONDecodeError
    except ImportError:

        class JSONDecodeError(ValueError):

            def __init__(self, msg, doc, pos):
                super().__init__(msg)
                self.msg = msg
                self.doc = doc
                self.pos = pos
        mypkg_compat.JSONDecodeError = JSONDecodeError
        JSONDecodeError.__module__ = 'mypkg.compat'
    _cribo_self.JSONDecodeError = JSONDecodeError
    bytes = __import__('builtins').bytes
    _cribo_self.bytes = bytes
    basestring = str
    _cribo_self.basestring = basestring
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
mypkg_compat.__init__ = _cribo_init___cribo_19d82f_mypkg_compat
mypkg = _cribo.types.SimpleNamespace(__name__='mypkg', __initializing__=False, __initialized__=False, __path__=[])
mypkg.compat = mypkg_compat
mypkg_exceptions = _cribo.types.SimpleNamespace(__name__='mypkg.exceptions', __initializing__=False, __initialized__=False)
_cribo_finder.bind('mypkg.exceptions', mypkg_exceptions)
mypkg.exceptions = mypkg_exceptions
def _cribo_init___cribo_d4de1c_mypkg(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'mypkg'
    _cribo_self.__doc__ = None
    global mypkg_compat, mypkg_exceptions
    mypkg_compat = _cribo_init___cribo_19d82f_mypkg_compat(mypkg_compat)
    compat = mypkg.compat
    _cribo_self.compat = compat
    mypkg_exceptions = _cribo_init___cribo_4c6596_mypkg_exceptions(mypkg_exceptions)
    exceptions = mypkg.exceptions
    _cribo_self.exceptions = exceptions
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
mypkg.__init__ = _cribo_init___cribo_d4de1c_mypkg
def _cribo_init___cribo_4c6596_mypkg_exceptions(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException, _cribo=_cribo, _sys=_sys):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'mypkg'
    _cribo_self.__doc__ = None
    __cribo_init_result = _cribo_init___cribo_d4de1c_mypkg(mypkg)
    for attr in dir(__cribo_init_result):
        if not attr.startswith('_'):
            setattr(mypkg, attr, getattr(__cribo_init_result, attr))

    class MyError(Exception):
        """Base exception class"""
        pass
    MyError.__module__ = 'mypkg.exceptions'
    MyError.__qualname__ = 'MyError'
    _cribo_self.MyError = MyError

    class MyJSONError(MyError, mypkg.compat.JSONDecodeError):
        """JSON error that inherits from compat JSONDecodeError"""

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'mypkg.exceptions'), _cribo_f)[1])
        def __init__(self, *args):
            mypkg.compat.JSONDecodeError.__init__(self, *args)
            MyError.__init__(self, str(args[0]) if args else "")
    MyJSONError.__module__ = 'mypkg.exceptions'
    MyJSONError.__qualname__ = 'MyJSONError'
    _cribo_self.MyJSONError = MyJSONError
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
mypkg_exceptions.__init__ = _cribo_init___cribo_4c6596_mypkg_exceptions
__cribo_init_result = _cribo_init___cribo_d4de1c_mypkg(mypkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(mypkg, attr, getattr(__cribo_init_result, attr))
mypkg_exceptions = _cribo_init___cribo_4c6596_mypkg_exceptions(mypkg_exceptions)
MyJSONError = mypkg.exceptions.MyJSONError
try:
    raise MyJSONError("Test error", "doc", 42)
except MyJSONError as e:
    print(f"Caught error: {e}")
    print("SUCCESS")
compat = mypkg.compat
exceptions = mypkg.exceptions
