crates/cribo/tests/snapshots/bundled_code@namespace_forward_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/namespace_forward_reference/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry):
        self._entry = entry

    def create_module(self, spec):
        namespace = self._entry[1]
        if namespace is not None:
            return globals()[namespace]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        try:
            globals()[init](module)
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, _CriboPreservedLoader(entry), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('mypkg', None, 'mypkg', True)
_cribo_finder.register('mypkg.exceptions', None, None, False, {'MyJSONError': 'MyJSONError'})
mypkg_compat = _cribo.types.SimpleNamespace(__name__='mypkg.compat')
mypkg = _cribo.types.SimpleNamespace(__name__='mypkg', __initializing__=False, __initialized__=False, __path__=[])
mypkg.compat = mypkg_compat
JSONDecodeError = _cribo.json.JSONDecodeError
mypkg_compat.JSONDecodeError = JSONDecodeError
mypkg_exceptions = _cribo.types.SimpleNamespace(__name__='mypkg.exceptions')
mypkg.exceptions = mypkg_exceptions
class MyJSONError(JSONDecodeError, Exception):
    """Error class that inherits from JSONDecodeError"""

    def __init__(self, *args):
        JSONDecodeError.__init__(self, *args)
        Exception.__init__(self, str(args[0]) if args else "")
MyJSONError.__module__ = 'mypkg.exceptions'
mypkg_exceptions.MyJSONError = MyJSONError
try:
    raise MyJSONError("Test error", "doc", 42)
except MyJSONError as e:
    print(f"Caught error: {e}")
    print("SUCCESS")
exceptions = mypkg.exceptions
compat = mypkg.compat
